--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 streamlit
+pillow
 langchain
 langchain-community
 langchain-groq
 faiss-cpu
 sentence-transformers
 huggingface-hub
-unstructured
-unstructured[local-inference]
-pdfminer.six
-pillow
+pypdf
+numpy
+pandas
+scikit-learn
+scipy
+tqdm
+requests
