--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,34 @@
-# -----------------------------
-# Core framework & utilities
-# -----------------------------
-streamlit>=1.39.0
-pillow>=10.4.0
-requests>=2.32.0
-tqdm>=4.66.4
+# Core setup
+pip==25.3
+setuptools>=70.0.0
+wheel>=0.43.0
 
-# -----------------------------
-# LangChain ecosystem (no unstructured deps)
-# -----------------------------
+# Streamlit + env
+streamlit==1.39.0
+python-dotenv==1.0.1
+pillow==10.4.0
+
+# LangChain ecosystem (aligned versions)
 langchain==0.2.14
-langchain-community==0.2.14
-langchain-text-splitters>=0.2.2
-langchain-groq>=0.1.2
-langchain-huggingface>=0.0.5
+langchain-core==0.2.33
+langchain-community==0.2.12
+langchain-groq==0.2.0
+langchain-text-splitters==0.2.2
+sentence-transformers==3.2.1
+huggingface-hub==0.25.2
+faiss-cpu==1.12.0
+pypdf==4.3.1
 
-# -----------------------------
-# Embeddings / Transformers
-# -----------------------------
-sentence-transformers>=3.0.1
-huggingface-hub>=0.25.0
+# Data / ML / visualization
+numpy==1.26.4
+pandas==2.2.3
+scikit-learn==1.5.2
+scipy==1.14.1
+tqdm==4.66.5
+requests==2.32.3
+umap-learn==0.5.6
 
-# -----------------------------
-# Vector storage
-# -----------------------------
-faiss-cpu>=1.8.0
-
-# -----------------------------
-# Data handling & ML
-# -----------------------------
-numpy>=1.26.0
-pandas>=2.2.2
-scikit-learn>=1.5.0
-scipy>=1.13.0
-
-# -----------------------------
-# PDF processing
-# -----------------------------
-pypdf>=4.2.0
-pdfminer.six==20221105  # stable version, avoids open_filename import errors
-
-
-# -----------------------------
-# Block unstructured explicitly
-# -----------------------------
-# Prevents Streamlit Cloud auto-install from pulling heavy deps
---no-binary=unstructured
-
+# Compatibility helpers
+pydantic==2.9.2
+typing-extensions==4.12.2
+python-dateutil==2.9.0.post0
